--- a/.github/workflows/master_frtonweb.yml
+++ b/.github/workflows/master_frtonweb.yml
@@ -25,7 +25,15 @@ jobs:
         run: |
           npm install
           npm run build --prod
-        
+          
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+         name: node-app
+         path: release.zip
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
