--- a/.github/workflows/master_frtonweb.yml
+++ b/.github/workflows/master_frtonweb.yml
@@ -35,11 +35,6 @@ jobs:
          name: node-app
          path: release.zip
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,7 +48,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
-
+      
+      - name: unzip artifact for deployment
+        run: unzip release.zip
+    
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
